--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Python cache
+# Byte-compiled / cache
 __pycache__/
 *.py[cod]
 *.pyo
@@ -7,21 +7,26 @@ __pycache__/
 
 # Virtual environments
 venv/
-.env/
 .venv/
 ENV/
 env/
 *.venv
 
-# VSCode / IDE
+# Environment variables
+.env
+
+# IDEs / Editors
 .vscode/
 .idea/
 
 # Jupyter
-.ipynb_checkpoints
+.ipynb_checkpoints/
 
-# ChromaDB store
+# ChromaDB local store
 chroma_store/
+
+# Generated data/outputs
+output/
 
 # OS files
 .DS_Store
@@ -29,6 +34,3 @@ Thumbs.db
 
 # Logs
 *.log
-
-# Environment variables
-.env
