--- a/argo_rag/requirements.txt
+++ b/argo_rag/requirements.txt
@@ -1,12 +1,15 @@
 # Core
-langchain==0.3.7
-chromadb==0.5.5
-sentence-transformers==2.2.2
-python-dotenv==1.0.1
-requests==2.31.0
+python-dotenv
+requests
 
-# Database access
-pyodbc==5.1.0
+# LangChain & Chroma
+langchain
+langchain-chroma
+langchain-huggingface
+chromadb
 
-numpy==1.26.4
-torch>=2.0.0
+# HuggingFace embeddings
+sentence-transformers
+
+# Database connector
+pyodbc
